tests/language/syntax/errors/missing-semicolon.zena
// @target: module
let x = 1
let y = 2; // @error: Expected ';'
